Details
-
Bug
-
Resolution: Done
-
P2: Important
-
5.15.10, 6.4.0 Beta2
-
None
-
7ea0aa1a57 (qt/qtdeclarative/dev) 7ea0aa1a57 (qt/tqtc-qtdeclarative/dev)
Description
See attached project.
import QtQuick 2.15 import QtQuick.Window 2.15 Window { width: 640 height: 480 visible: true Column { Image { width: 100 height: 100 source: "qrc:/youtube.pkm" } Image { width: 100 height: 100 source: "http://127.0.0.1:4000/images/youtube.pkm" } } }
The first Image displays the *.pkm file just fine.
However, when the same file is loaded from a HTTP server, it produces an error:
qrc:/main.qml:15:9: QML Image: Error decoding: http://127.0.0.1:4000/images/youtube.pkm: Unsupported image format
Notes
The file was downloaded from the server successfully. If a bad URL is used instead, the error message would be something like
qrc:/main.qml:15:9: QML Image: Error transferring http://127.0.0.1:4000/images/yootube.pkm - server replied: Not Found
Attachments
For Gerrit Dashboard: QTBUG-105941 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
428919,3 | Support compressed texture files also when non-local, i.e. downloaded | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |