Support compressed texture files also when non-local, i.e. downloaded

QQuickPixmapCache has three code paths where external data is loaded
into images/textures: For local files, for local files in async mode,
and for downloaded files. Handling of compressed trexture files was
added to the two former, but not the latter. This commit fixes that.

Fixes: QTBUG-105941
Change-Id: I6d093f9dfcd78951b81a790776509efc336e30ba
Reviewed-by: Laszlo Agocs <laszlo.agocs@qt.io>